# quant-pilot

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yaml
data/universe/: sample_membership.csv
docs/: SYSTEM_DESIGN.md
docs/wiki/: 01-scaffold.md  02-domain-ports-adapters.md  03-data-ingestion.md  04-math-models.md  05-backtest-engine.md  06-momentum-strategy.md  07-attribution-validation.md  08-pairs-trading.md  09-risk-layer.md  10-api-layer.md  11-paper-broker.md  12-order-approval-path.md  13-smartapi-live-readiness.md  14-dashboard.md  15-data-ingestion-wiring.md  README.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  ui.tsx
infra/: .env.example  Dockerfile  docker-compose.yml
src/quant_pilot/: __init__.py  log.py
src/quant_pilot/adapters/: __init__.py  clock.py
src/quant_pilot/adapters/artifacts/: __init__.py  local_store.py
src/quant_pilot/adapters/broker/: __init__.py  paper_broker.py  smartapi_broker.py
src/quant_pilot/adapters/data/: __init__.py  calendar.py  parquet_cache.py  yfinance_provider.py
src/quant_pilot/adapters/persistence/: __init__.py  models.py  repository.py
src/quant_pilot/adapters/secrets/: __init__.py  keyring_store.py
src/quant_pilot/api/: __init__.py  deps.py  main.py
src/quant_pilot/api/routers/: backtests.py  data.py  jobs.py  orders.py  portfolio.py  sweep.py  system.py  universe.py
src/quant_pilot/api/schemas/: __init__.py  backtests.py  data.py  orders.py  sweep.py
src/quant_pilot/api/security/: __init__.py  auth.py  headers.py
src/quant_pilot/config/: __init__.py  settings.py
src/quant_pilot/db/: __init__.py  base.py  session.py
src/quant_pilot/db/migrations/: env.py
src/quant_pilot/db/migrations/versions/: 0001_initial.py  0002_orders.py
src/quant_pilot/domain/: __init__.py  models.py  ports.py
src/quant_pilot/engine/: __init__.py
src/quant_pilot/engine/analysis/: __init__.py  attribution.py  performance.py  validation.py
src/quant_pilot/engine/backtest/: __init__.py  costs.py  engine.py  impact.py
src/quant_pilot/engine/data/: __init__.py  corporate_actions.py  quality.py  universe.py
src/quant_pilot/engine/models/: __init__.py  black_scholes.py  monte_carlo.py  ou_process.py
src/quant_pilot/engine/risk/: __init__.py  config.py  drawdown.py  position_sizing.py  var.py
src/quant_pilot/engine/strategies/: __init__.py  base.py  cointegration.py  momentum.py  pairs_trading.py
src/quant_pilot/live/: __init__.py  pnl.py  reconciliation.py  slippage.py
src/quant_pilot/workers/: __init__.py  queue.py  scheduler.py  tasks.py
tests/: conftest.py  test_adapters.py  test_analysis.py  test_api.py  test_backtest_engine.py  test_black_scholes.py  test_costs_impact.py  test_data_api.py  test_data_quality.py  test_health.py  test_live_readiness.py  test_market_data.py  test_momentum.py  test_monte_carlo.py  test_orders.py  test_ou_process.py  test_pairs.py  test_paper_broker.py  test_repository.py  test_risk.py  test_settings.py  test_smartapi_broker.py  test_sweep.py  test_universe.py
