[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-pilot"
version = "0.1.0"
description = "Indian equities (NSE/BSE) algorithmic trading platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Quant Pilot" }]
dependencies = [
  # --- API / platform ---
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "itsdangerous>=2.2",       # signed session cookies
  # --- persistence ---
  "sqlalchemy>=2.0.36",
  "alembic>=1.14",
  "psycopg[binary]>=3.2",
  # --- jobs / scheduling ---
  "redis>=5.2",
  "rq>=2.0",
  "apscheduler>=3.11",
  # --- security ---
  "argon2-cffi>=23.1",       # password hashing
  "pyotp>=2.9",              # TOTP 2FA
  "keyring>=25.5",           # OS keychain secret store
  # --- data / engine (Phase 1 data infrastructure) ---
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "yfinance>=0.2.40",
  "pandas-market-calendars>=4.4",
  # --- misc ---
  "structlog>=24.4",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.28",             # FastAPI TestClient
  "ruff>=0.8",
  "mypy>=1.13",
  "pip-audit>=2.7",
  "types-pyyaml>=6.0",
]

# Remaining engine-heavy deps are added in their own phases to keep the image lean:
#   nse:         nsepython (option chains, FII/DII) — VRP / Black-Scholes phase
#   backtest:    vectorbt, backtrader
#   models:      scipy, statsmodels, arch
#   analysis:    quantstats, pyfolio, matplotlib, plotly
#   ml (opt):    lightgbm, xgboost, scikit-learn, shap

[tool.hatch.build.targets.wheel]
packages = ["src/quant_pilot"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# B008: FastAPI's Depends() in argument defaults is the idiomatic DI pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["quant_pilot"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
